--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,15 +50,15 @@ jobs:
         uses: ammaraskar/msvc-problem-matcher@master
 
       - name: Build ${{matrix.configuration}} ${{matrix.arch}} binaries
-        run: msbuild /m /v:minimal /p:Configuration=${{matrix.configuration}} /p:Platform=${{matrix.platform}} build/xlabs-master.sln
+        run: msbuild /m /v:minimal /p:Configuration=${{matrix.configuration}} /p:Platform=${{matrix.platform}} build/h2m-master.sln
 
       - name: Upload ${{matrix.configuration}} ${{matrix.arch}} binaries
         uses: actions/upload-artifact@v3.1.2
         with:
           name: Windows ${{matrix.configuration}} ${{matrix.arch}} binaries
           path: |
-            build/bin/${{matrix.arch}}/${{matrix.configuration}}/xlabs-master.exe
-            build/bin/${{matrix.arch}}/${{matrix.configuration}}/xlabs-master.pdb
+            build/bin/${{matrix.arch}}/${{matrix.configuration}}/h2m-master.exe
+            build/bin/${{matrix.arch}}/${{matrix.configuration}}/h2m-master.pdb
 
   build-linux:
     name: Build Linux
@@ -115,4 +115,4 @@ jobs:
         with:
           name: Linux ${{matrix.configuration}} ${{matrix.arch}} binaries
           path: |
-            build/bin/${{matrix.arch}}/${{matrix.configuration}}/xlabs-master
+            build/bin/${{matrix.arch}}/${{matrix.configuration}}/h2m-master
