--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -116,3 +116,29 @@ jobs:
           name: Linux ${{matrix.configuration}} ${{matrix.arch}} binaries
           path: |
             build/bin/${{matrix.arch}}/${{matrix.configuration}}/h2m-master
+  
+  deploy:
+    name: Deploy artifacts
+    needs: [build-win, build-linux]
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/master')
+    steps:    
+      - name: Download master server binary
+        uses: actions/download-artifact@v3.0.2
+        with:
+          name: Linux Release x64 binaries
+
+      - name: Install SSH key
+        uses: shimataro/ssh-key-action@v2.5.1
+        with:
+          key: ${{ secrets.H2M_MASTER_SSH_PRIVATE_KEY }}
+          known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+
+      - name: Add known hosts
+        run: ssh-keyscan -H ${{ secrets.H2M_MASTER_SSH_ADDRESS }} >> ~/.ssh/known_hosts
+
+      - name: Upload master server binary
+        run: rsync -avz h2m-master ${{ secrets.H2M_MASTER_SSH_USER }}@${{ secrets.H2M_MASTER_SSH_ADDRESS }}:${{ secrets.H2M_MASTER_SSH_PATH_MASTER_SERVER }}/
+
+      - name: Restart master server
+        run: ssh ${{ secrets.H2M_MASTER_SSH_USER }}@${{ secrets.H2M_MASTER_SSH_ADDRESS }} ${{ secrets.H2M_MASTER_SSH_RESTART_MASTER_SERVER }}
