--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -135,10 +135,10 @@ jobs:
           known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
 
       - name: Add known hosts
-        run: ssh-keyscan -H ${{ secrets.H2M_MASTER_SSH_ADDRESS }} >> ~/.ssh/known_hosts
+        run: ssh-keyscan -H  ${{ secrets.H2M_MASTER_SSH_ADDRESS }} >> ~/.ssh/known_hosts
 
       - name: Upload master server binary
         run: rsync -avz h2m-master ${{ secrets.H2M_MASTER_SSH_USER }}@${{ secrets.H2M_MASTER_SSH_ADDRESS }}:${{ secrets.H2M_MASTER_SSH_PATH_MASTER_SERVER }}/
 
-      - name: Restart master server
-        run: ssh ${{ secrets.H2M_MASTER_SSH_USER }}@${{ secrets.H2M_MASTER_SSH_ADDRESS }} ${{ secrets.H2M_MASTER_SSH_RESTART_MASTER_SERVER }}
+      # - name: Restart master server
+      #   run: ssh ${{ secrets.H2M_MASTER_SSH_USER }}@${{ secrets.H2M_MASTER_SSH_ADDRESS }} ${{ secrets.H2M_MASTER_SSH_RESTART_MASTER_SERVER }}
