--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -112,7 +112,7 @@ jobs:
       - name: Set up problem matching
         uses: ammaraskar/gcc-problem-matcher@master
 
-      - name: Build ${{matrix.configuration}} ARM64 binaries
+      - name: Build ${{matrix.configuration}} ${{matrix.arch}} binaries
         if: matrix.arch == 'aarch64'
         run: |
           pushd build
