--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,7 +72,6 @@ jobs:
         arch:
           - x86
           - x64
-          - aarch64
         include:
           - configuration: Debug
             config: debug
@@ -93,13 +92,6 @@ jobs:
           sudo apt-get update
           sudo apt-get -y install libcurl4-gnutls-dev
 
-      - name: Install dependencies (aarch64)
-        if: matrix.arch == 'aarch64'
-        run: |
-          sudo dpkg --add-architecture aarch64
-          sudo apt-get update
-          sudo apt-get -y install gcc-multilib g++-multilib libcurl4-gnutls-dev
-
       - name: Install dependencies (x86)
         if: matrix.arch == 'x86'
         run: |
@@ -114,24 +106,60 @@ jobs:
         uses: ammaraskar/gcc-problem-matcher@master
 
       - name: Build ${{matrix.configuration}} ${{matrix.arch}} binaries
-        if: matrix.arch == 'aarch64'
-        run: |
-          pushd build
-          ../tools/mold -run make config=${{matrix.config}}_arm64 -j$(nproc)
-
-      - name: Build ${{matrix.configuration}} ${{matrix.arch}} binaries
-        if: matrix.arch == 'x86' || matrix.arch == 'x64'
         run: |
           pushd build
           ../tools/mold -run make config=${{matrix.config}}_${{matrix.arch}} -j$(nproc)
 
       - name: Upload ${{matrix.configuration}} ${{matrix.arch}} binaries
-        if: matrix.arch == 'x86' || matrix.arch == 'x64'
         uses: actions/upload-artifact@v3.1.2
         with:
           name: Linux ${{matrix.configuration}} ${{matrix.arch}} binaries
           path: |
             build/bin/${{matrix.arch}}/${{matrix.configuration}}/h2m-master
+  
+  build-linux-arm:
+    name: Build Linux Arm
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        configuration:
+          - Debug
+          - Release
+        arch:
+          - aarch64
+        include:
+          - configuration: Debug
+            config: debug
+          - configuration: Release
+            config: release
+    steps:
+      - name: Check out files
+        uses: actions/checkout@v3.5.2
+        with:
+          submodules: true
+          fetch-depth: 0
+          # NOTE - If LFS ever starts getting used during builds, switch this to true!
+          lfs: false
+
+      - name: Install dependencies (aarch64)
+        if: matrix.arch == 'aarch64'
+        run: |
+          sudo dpkg --add-architecture aarch64
+          sudo apt-get update
+          sudo apt-get -y install gcc-multilib g++-multilib libcurl4-gnutls-dev
+
+      - name: Generate project files
+        run: ./generate.sh
+
+      - name: Set up problem matching
+        uses: ammaraskar/gcc-problem-matcher@master
+
+      - name: Build ${{matrix.configuration}} ${{matrix.arch}} binaries
+        if: matrix.arch == 'aarch64'
+        run: |
+          pushd build
+          ../tools/mold -run make config=${{matrix.config}}_arm64 -j$(nproc)
 
       - name: Upload ${{matrix.configuration}} ARM64 binaries
         if: matrix.arch == 'aarch64'
@@ -140,10 +168,11 @@ jobs:
           name: Linux ${{matrix.configuration}} ARM64 binaries
           path: |
             build/bin/arm64/${{matrix.configuration}}/h2m-master
-  
+
+
   deploy:
     name: Deploy artifacts
-    needs: [build-linux]
+    needs: [build-linux-arm]
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main')
     steps:    
