--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -117,69 +117,16 @@ jobs:
           path: |
             build/bin/${{matrix.arch}}/${{matrix.configuration}}/h2m-master
   
-  build-linux-arm:
-    name: Build Linux Arm
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        configuration:
-          - Debug
-          - Release
-        arch:
-          - aarch64
-        include:
-          - configuration: Debug
-            config: debug
-          - configuration: Release
-            config: release
-    steps:
-      - name: Check out files
-        uses: actions/checkout@v3.5.2
-        with:
-          submodules: true
-          fetch-depth: 0
-          # NOTE - If LFS ever starts getting used during builds, switch this to true!
-          lfs: false
-
-      - name: Install dependencies (aarch64)
-        if: matrix.arch == 'aarch64'
-        run: |
-          sudo dpkg --add-architecture arm64
-          sudo apt-get update
-          sudo apt-get -y install gcc-multilib g++-multilib libcurl4-gnutls-dev
-
-      - name: Generate project files
-        run: ./generate.sh
-
-      - name: Set up problem matching
-        uses: ammaraskar/gcc-problem-matcher@master
-
-      - name: Build ${{matrix.configuration}} ${{matrix.arch}} binaries
-        if: matrix.arch == 'aarch64'
-        run: |
-          pushd build
-          make config=${{matrix.config}}_arm64 -j$(nproc)
-
-      - name: Upload ${{matrix.configuration}} ARM64 binaries
-        if: matrix.arch == 'aarch64'
-        uses: actions/upload-artifact@v3.1.2
-        with:
-          name: Linux ${{matrix.configuration}} ARM64 binaries
-          path: |
-            build/bin/arm64/${{matrix.configuration}}/h2m-master
-
-
   deploy:
     name: Deploy artifacts
-    needs: [build-linux-arm]
+    needs: [build-win, build-linux]
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main')
     steps:    
       - name: Download master server binary
         uses: actions/download-artifact@v3.0.2
         with:
-          name: Linux Release ARM64 binaries
+          name: Linux Release x64 binaries
 
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2.5.1
