--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,12 +3,10 @@ name: Build
 on:
   push:
     branches:
-      - "**"
-    tags:
-      - '[0-9]+.[0-9]+.[0-9]+'
+      - "*"
   pull_request:
     branches:
-      - "**"
+      - "*"
     types: [opened, synchronize, reopened]
 
 concurrency:
@@ -123,7 +121,7 @@ jobs:
     name: Deploy artifacts
     needs: [build-win, build-linux]
     runs-on: ubuntu-latest
-    if: github.ref_type == 'tag'
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main')
     steps:    
       - name: Download master server binary
         uses: actions/download-artifact@v3.0.2
